--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
-p{
-  color:red;
+h2{
+  font-size: 100px;
+  margin:50px auto;
+  text-align: center;
+  text-shadow:10px 10px 8px rgba(0,180,255,1);
 }
