--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 h2{
-  font-size: 100px;
+  font-size: 50px;
   margin:50px auto;
   text-align: center;
-  text-shadow:10px 10px 8px rgba(0,180,255,1);
+  text-shadow:10px 10px 8px white;
 }
